--- a/cdprojects/Capstone/Resources/css/style.css
+++ b/cdprojects/Capstone/Resources/css/style.css
@@ -1,6 +1,35 @@
      html {
      font-size: 16px;
+     /* font-family: helvetica, "Garamond","Times",serif : "Arial",sans-serif; */
+     }
+
+  /* Latin 400 */
+  @font-face {
+   font-family: 'Space Mono';
+   font-style: normal;
+   font-weight: 400;
+   src: local('Space Mono'), local('SpaceMono-Regular'), url(https://fonts.gstatic.com/s/spacemono/v1/adVweg3BJhE6r8jYmXseHfk_vArhqVIZ0nv9q090hN8.woff2) format('woff2');
+   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
+ }
+ /* latin 700 */
+ @font-face {
+   font-family: 'Space Mono';
+   font-style: normal;
+   font-weight: 700;
+   src: local('Space Mono Bold'), local('SpaceMono-Bold'), url(https://fonts.gstatic.com/s/spacemono/v1/vdpMRWfyjfCvDYTz00NEPIWiMMZ7xLd792ULpGE4W_Y.woff2) format('woff2');
+   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
+ }
+ .latin {
+   font-family: 'Spce Mono';
+   font-size: 1.30rem;
+ }
+   h1,h2,h3,h4 {
+     color: hsl(11,8%,6%);
    }
+   p {
+       color: #808080;
+   }
+   /* top header section */
    .header {
      display: flex;
      height: 64px;
@@ -18,10 +47,10 @@
       margin-top:10px;
     /*  margin-bottom: 10px;*/
       margin-right:0px;
-      color: #808080;
+      color: hsl(11, 7%, 9%);
    }
    .header #c2 {
-     color: #c0c0c0;
+     color: hsl(11, 10%, 61%);
      margin-top: 10px;
      margin-bottom: 10px;
      margin-left:0px;
@@ -67,22 +96,28 @@
 .learntext {
   display : block;
   width: 423px;
-  padding-top: 6rem;
+  padding-top: 3rem;
   align-items: center;
   justify-content: left;
   margin-right: 24px;
   margin-left: 16px;
   color: #696969;
-  font-weight:bold;
+  font-family: lato;
+  font-size: 1.5rem;
+  font-weight:bolder;
+}
+.learntext #head2 {
+  padding-bottom: 0.3rem;
 }
 /* Start here button section */
 .learntext h3 {
    margin-top: 8px;
    margin-bottom: 8px;
    height: 3rem;
-   width: 70%;
+   width: 80%;
    background-color: #696969;
    color: white;
+   font-family: roboto;
    text-align: center;
    padding-top: 1rem;
 }
@@ -106,13 +141,29 @@
   width: 100%;
   height:70%;
 }
-
+.practicetext {
+  margin-right:24px;
+  margin-top: 0px;
+  margin-left:24px;
+}
+.practicetext .pt1{
+  margin-bottom: 24px;
+  font-size: 900;
+}
+.practicetext .pt2{
+  margin-bottom: 2rem;
+  margin-top:0px;
+}
+.practicetext .pt3{
+  margin-top:2rem;
+}
 .rightkp {
   display: block;
   width: 40%;
-  margin-right: 24px;
-  margin-left: 16px;
+  /*margin-right: 24px;
+  margin-left: 16px; */
   height: 40rem;
+  color: #696969;
   }
 
 .kporientation, .kpcampus, .kpglecture {
@@ -123,14 +174,30 @@
 }
 .rightkp img {
   width: 50%;
-  height:30%;
+  height:25%;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  margin-left:16px;
+  margin-right:5px;
 }
 .kptext1, .kptext2, .kptext3 {
   display: block;
-  padding-left: 2rem;
+  padding-left: 0.5rem;
+  padding-top: 1rem;
+  margin-top: 1rem;
   margin-left: 1rem;
+  font-weight: bold;
+  font-family: 'Roboto';
 }
-
+.rightkp.line1 {
+  padding-bottom: 8px;
+  font-family: loto;
+  font-size: 2rem;
+  font-weight: bolder;
+}
+.rightkp.line3 {
+  padding-top: 8px;
+}
 /* Media Queries Section */
 /* Desktop Section */
 @media only screen and (min-width: 1020px) {
