--- a/cdprojects/Capstone/Resources/css/style.css
+++ b/cdprojects/Capstone/Resources/css/style.css
@@ -122,56 +122,64 @@
    padding-top: 1rem;
 }
 /* Keep Practicing section */
+/* Keep practice main container full section */
 .keeppractice {
   display: flex;
   width: 80rem;
-  height: 60rem;
+  height: 57rem;
   margin-left: 24px;
+  margin-bottom: 24px;
+
 }
+/* Keep practice left side main container */
 .leftkp {
   display: block;
   width:60%;
-  height: 40rem;
+  height: 50rem;
 }
+/* Keep practice left side image */
 .practiceimg {
   margin-top:32px;
   margin-bottom:32px;
   margin-right:24px;
-  margin-left: 24px;
+  margin-left: 18px;
   width: 100%;
   height:70%;
 }
+/*keep practice text section */
 .practicetext {
   margin-right:24px;
   margin-top: 0px;
   margin-left:24px;
 }
 .practicetext .pt1{
-  margin-bottom: 24px;
+  margin-bottom: 12px;
   font-size: 900;
 }
 .practicetext .pt2{
   margin-bottom: 2rem;
-  margin-top:0px;
+  margin-top:12px;
 }
 .practicetext .pt3{
   margin-top:2rem;
 }
+/* Keep practice right side main container */
 .rightkp {
   display: block;
   width: 40%;
   /*margin-right: 24px;
   margin-left: 16px; */
-  height: 40rem;
+  height: 50rem;
   color: #696969;
   }
-
+/* Keep practice right side small containers */
 .kporientation, .kpcampus, .kpglecture {
   display: flex;
   width: 95%;
   margin-top: 1rem;
-  margin-left: 3rem;
+  margin-left: 2rem;
 }
+/* right side icons of keep practice */
 .rightkp img {
   width: 50%;
   height:25%;
@@ -197,6 +205,73 @@
 }
 .rightkp.line3 {
   padding-top: 8px;
+}
+/* Start Learning Section */
+/* Start learning section main container */
+.startlearn {
+  display:block;
+  margin-top:24px;
+  background-color: #d3d3d3 ;
+  background-size: cover;
+  width: 80rem;
+  height: 90rem;
+  padding-left: 30px;
+  margin-left: 32px;
+  font-family: Arial,serif;
+  font-size: 1.5rem;
+}
+/* Start learning section container for first row */
+.stlearn1 {
+  padding-top: 16px;
+  padding-bottom: 13px;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: bolder;
+}
+/* Start learning section container for 2nd row and 3rd row*/
+.stlearn2, .stlearn3 {
+  display: flex;
+  padding-top: 2px;
+  padding-bottom: 1px;
+  margin-bottom: 2px;
+  padding-left: 28px;
+  height:40%
+}
+
+/* start learning small containers for each icon and its details */
+.stln2p1, .stln2p2, .stln2p3,.stln3p1,.stln3p2,.stln3p3 {
+  display: block;
+  width: 27%;
+  height: 100% ;
+/*  margin-bottom: 1rem;*/
+  margin-top: 1rem;
+  margin-left: 16px;
+  margin-right:16px;
+}
+.stlnimage {
+  height: 50%;
+  width:100%;
+}
+.stlearntext {
+   height: 50%;
+   width: 100%;
+
+  padding-bottom: 24px;
+  padding-left: 16px;
+}
+.stlearntext h3{
+  padding-top: 16px;
+  padding-bottom: 16px;
+  line-height: 1.5rem;
+  font-weight: bolder;
+}
+.stlearntext h4 {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  font-stretch: expanded;
+}
+.stlearntext p {
+  font-weight: 500;
 }
 /* Media Queries Section */
 /* Desktop Section */
